--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Category/Delete.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Category/Delete.cshtml
@@ -23,7 +23,7 @@
                         <div class="col-md-6 text-right">
                             <a href="@Url.Action("Edit","Category",  new { id = Model.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> Cập nhật</a>
                             <a href="@Url.Action("Index","Category")" class="btn btn-sm btn-info"><i class="fas fa-long-arrow-alt-left"></i> Quay lại</a>
-                              <!--  <button class="btn btn-sm btn-danger" type="submit"><i class="fas fa-trash-alt"></i> Xóa</button>> -->
+                             <button class="btn btn-sm btn-danger" type="submit"><i class="fas fa-trash-alt"></i> Xóa</button>
                         </div>
                     </div>
                 }
