--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Category/Trash.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Category/Trash.cshtml
@@ -62,7 +62,7 @@
                                 </td>
                                 <td class="text-center">
                                     <a href="@Url.Action("Retrash","Category",  new { id = item.Id })" class="btn btn-sm btn-info"><i class="fas fa-trash-restore"></i> </a>
-                                    <a href="@Url.Action("Delele","Category",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> </a>
+                                    <a href="@Url.Action("Delete","Category",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> </a>
                                 </td>
                                 <td>@item.Id</td>
                             </tr>
