--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Supplier/Details.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Supplier/Details.cshtml
@@ -1,7 +1,7 @@
-﻿@model MyClass.Models.Topic
+﻿@model MyClass.Models.Supplier
 
 @{
-    ViewBag.Title = "Xóa danh mục";
+    ViewBag.Title = "Chi tiết danh mục sản phẩm";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 <!-- Content Wrapper. Contains page content -->
@@ -13,20 +13,15 @@
         <!-- Default box -->
         <div class="card">
             <div class="card-header">
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
-                    <div class="row">
-                        <div class="col-md-6">
-                            <strong>Xác nhận xóa danh mục sản phẩm</strong>
-                        </div>
-                        <div class="col-md-6 text-right">
-                            <a href="@Url.Action("Edit","Topic",  new { id = Model.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> Cập nhật</a>
-                            <a href="@Url.Action("Index","Topic")" class="btn btn-sm btn-info"><i class="fas fa-long-arrow-alt-left"></i> Quay lại</a>
-                             <button class="btn btn-sm btn-danger" type="submit"><i class="fas fa-trash-alt"></i> Xóa</button>
-                        </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <strong>Chi tiết danh mục sản phẩm</strong>
                     </div>
-                }
+                    <div class="col-md-6 text-right">
+                        <a href="@Url.Action("Edit","Supplier",  new { id = Model.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> Cập nhật</a>
+                        <a href="@Url.Action("Index","Supplier")" class="btn btn-sm btn-info"><i class="fas fa-long-arrow-alt-left"></i> Quay lại</a>
+                    </div>
+                </div>
             </div>
             <div class="card-body">
                 <table class="table table-bordered">
