--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Supplier/Index.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Supplier/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<MyClass.Models.Product>
+﻿@model IEnumerable<MyClass.Models.Supplier>
 
 @{
-    ViewBag.Title = "Tất cả sản phẩm";
+    ViewBag.Title = "Tất cả nhà cung cấp";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 @section header {
@@ -24,11 +24,11 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-6">
-                        <strong class="text-danger text-uppercase">Sản Phẩm</strong>
+                        <strong class="text-danger text-uppercase">Nhà cung cấp</strong>
                     </div>
                     <div class="col-md-6 text-right">
-                        <a href="@Url.Action("Create","Product")" class="btn btn-sm btn-success"><i class="fas fa-plus"></i> Thêm</a>
-                        <a href="@Url.Action("Trash","Product")" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Thùng rác</a>
+                        <a href="@Url.Action("Create","Supplier")" class="btn btn-sm btn-success"><i class="fas fa-plus"></i> Thêm</a>
+                        <a href="@Url.Action("Trash","Supplier")" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Thùng rác</a>
                     </div>
                 </div>
             </div>
@@ -38,14 +38,12 @@
                     <thead>
                         <tr>
                             <th class="text-center" style="width:20px">#</th>
-                            <th class="text-center" style="width:100px">Hình</th>
-                            <th>Tên sản phẩm</th>
+                            <th style="width:50px">Hình</th>
+                            <th>Tên nhà cung cấp</th>
                             <th>
-                                Danh mục sản phẩm
+                                Điện thoại
                             </th>
-                            <th>
-                                Nhà cung cấp
-                            </th>
+                            <th>Email</th>
                             <th>
                                 Ngày tạo
                             </th>
@@ -59,26 +57,29 @@
                         {
                             <tr>
                                 <td><input type="checkbox" name="checkId" value="" /></td>
-                                <td><img src="~/Public/images/products/@item.Image" alt="TenHinh" class="img-fluid" /></td>
+                                <td><img src="~/Public/images/suppliers/@item.Img" class="img-fluid" alt="Logo" /></td>
                                 <td>@item.Name</td>
-                                <td>@item.CatId</td>
-                                <td>111</td>
+                                <td>@item.Phone</td>
+                                <td>@item.Email</td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Slug)
+                                </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.CreatedAt)
                                 </td>
                                 <td class="text-center">
                                     @if (item.Status == 1)
                                     {
-                                        <a href="@Url.Action("Status","Product",  new { id = item.Id })" class="btn btn-sm btn-success"><i class="fas fa-toggle-on"></i> </a>
+                                        <a href="@Url.Action("Status","Supplier",  new { id = item.Id })" class="btn btn-sm btn-success"><i class="fas fa-toggle-on"></i> </a>
                                     }
                                     else
                                     {
-                                        <a href="@Url.Action("Status","Product",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-toggle-off"></i> </a>
+                                        <a href="@Url.Action("Status","Supplier",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-toggle-off"></i> </a>
                                     }
 
-                                    <a href="@Url.Action("Details","Product",  new { id = item.Id })" class="btn btn-sm btn-primary"><i class="fas fa-eye"></i> </a>
-                                    <a href="@Url.Action("Edit","Product",  new { id = item.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> </a>
-                                    <a href="@Url.Action("DelTrash","Product",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> </a>
+                                    <a href="@Url.Action("Details","Supplier",  new { id = item.Id })" class="btn btn-sm btn-primary"><i class="fas fa-eye"></i> </a>
+                                    <a href="@Url.Action("Edit","Supplier",  new { id = item.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> </a>
+                                    <a href="@Url.Action("DelTrash","Supplier",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> </a>
                                 </td>
                                 <td>@item.Id</td>
                             </tr>
