--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Supplier/Create.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Supplier/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model MyClass.Models.Topic
+﻿@model MyClass.Models.Supplier
 
 @{
-    ViewBag.Title = "Thêm danh mục sản phẩm";
+    ViewBag.Title = "Thêm nhà cung cấp";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Supplier", FormMethod.Post, new { @enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -20,11 +20,11 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-md-6">
-                            <strong class="text-danger text-uppercase">Thêm Danh Mục Sản Phẩm</strong>
+                            <strong class="text-danger text-uppercase">Thêm nhà cung cấp</strong>
                         </div>
                         <div class="col-md-6 text-right">
                             <button class="btn btn-sm btn-success" type="submit" name="create" ><i class="fas fa-save"></i> Lưu</button>
-                            <a href="@Url.Action("Index","Topic")" class="btn btn-sm btn-info"><i class="fas fa-long-arrow-alt-left"></i> Quay lại</a>
+                            <a href="@Url.Action("Index","Supplier")" class="btn btn-sm btn-info"><i class="fas fa-long-arrow-alt-left"></i> Quay lại</a>
                         </div>
                     </div>
                 </div>
@@ -32,27 +32,35 @@
                     <div class="row">
                         <div class="col-md-9">
                             <div class="form-group">
-                                <label>Tên danh mục sản phẩm <span class="text-danger">(*)</span></label>
-                                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @row="3" } })
-                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                                <div class="form-group">
-                                    <label>Từ khóa <span class="text-danger">(*)</span></label>
-                                    @Html.TextAreaFor(model => model.MetaDesc, new { @class = "form-control", @row = "3" })
-                                    @Html.ValidationMessageFor(model => model.MetaDesc, "", new { @class = "text-danger" })
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Mô tả <span class="text-danger">(*)</span></label>
-                                    @Html.TextAreaFor(model => model.MetaKey, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.MetaKey, "", new { @class = "text-danger" })
-                                </div>
+                                <label>Tên nhà cung cấp<span class="text-danger">(*)</span></label>
+                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @row = "3" } })
+                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                             </div>
+
+                            <div class="form-group">
+                                <label>SĐT</label>
+                                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control", @row = "3" } })
+                                @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div class="form-group">
+                                <label>Email</label>
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @row = "3" } })
+                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div class="form-group">
+                                <label>Địa chỉ</label>
+                                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control", @row = "3" } })
+                                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                            </div>
+
+
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label>Danh mục cha</label>
-                                    @Html.DropDownListFor(model => model.ParentId, (SelectList)ViewBag.ListCat, "Danh mục cha", new {@class="form-control"} )
-                                    @Html.ValidationMessageFor(model => model.ParentId, "", new { @class = "text-danger" })
+                                <label>Hình</label>
+                                    <input name="img" type="file" class="form-control" />
                             </div>
                             <div class="form-group">
                                 <label>Sắp xếp</label>
