--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Topic/Details.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Topic/Details.cshtml
@@ -1,107 +1,85 @@
 ﻿@model MyClass.Models.Topic
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Chi tiết danh mục sản phẩm";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
 
-<h2>Details</h2>
+    <!-- Main content -->
+    <section class="content my-2">
 
-<div>
-    <h4>Topic</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <!-- Default box -->
+        <div class="card">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col-md-6">
+                        <strong>Chi tiết danh mục sản phẩm</strong>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <a href="@Url.Action("Edit","Topic",  new { id = Model.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> Cập nhật</a>
+                        <a href="@Url.Action("Index","Topic")" class="btn btn-sm btn-info"><i class="fas fa-long-arrow-alt-left"></i> Quay lại</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <table class="table table-bordered">
+                    <tr>
+                        <th style="width: 100px">Tên trường</th>
+                        <th>Nội dung</th>
+                    </tr>
+                    <tr>
+                        <td> @Html.DisplayNameFor(model => model.Name)</td>
+                        <td> @Html.DisplayFor(model => model.Name)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Slug)</td>
+                        <td>@Html.DisplayFor(model => model.Slug)</td>
+                    </tr>
+                    <tr>
+                        <td> @Html.DisplayNameFor(model => model.ParentId)</td>
+                        <td> @Html.DisplayFor(model => model.ParentId)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Orders)</td>
+                        <td>@Html.DisplayFor(model => model.Orders)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.MetaDesc)</td>
+                        <td> @Html.DisplayFor(model => model.MetaDesc)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.MetaKey)</td>
+                        <td>@Html.DisplayFor(model => model.MetaKey)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.CreatedBy)</td>
+                        <td>@Html.DisplayFor(model => model.CreatedBy)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.CreatedAt)</td>
+                        <td>@Html.DisplayFor(model => model.CreatedAt)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.UpdatedBy)</td>
+                        <td>@Html.DisplayFor(model => model.UpdatedBy)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.UpdatedAt)</td>
+                        <td>@Html.DisplayFor(model => model.UpdatedAt)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Status)</td>
+                        <td>@Html.DisplayFor(model => model.Status)</td>
+                    </tr>
+                </table>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+        </div>
+        <!-- /.card -->
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Slug)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Slug)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ParentId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ParentId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Orders)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Orders)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MetaKey)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MetaKey)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MetaDesc)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MetaDesc)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-    </dl>
+    </section>
+    <!-- /.content -->
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<!-- /.content-wrapper -->
