--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Topic/Index.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Topic/Index.cshtml
@@ -1,94 +1,93 @@
 ﻿@model IEnumerable<MyClass.Models.Topic>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Tất cả danh mục";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Slug)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ParentId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Orders)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MetaKey)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MetaDesc)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Slug)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ParentId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Orders)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MetaKey)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MetaDesc)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdatedAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@section header {
+    <link href="~/Public/css/jquery.dataTables.min.css" rel="stylesheet" />
 }
+@section footer{
+    <script src="~/Public/js/jquery.dataTables.min.js"></script>
+    <script>
+        let table = new DataTable('#myTable');
+    </script>
+}
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
 
-</table>
+    <!-- Main content -->
+    <section class="content my-2">
+
+        <!-- Default box -->
+        <div class="card">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col-md-6">
+                        <strong class="text-danger text-uppercase">Danh Mục Sản Phẩm</strong>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <a href="@Url.Action("Create","Topic")" class="btn btn-sm btn-success"><i class="fas fa-plus"></i> Thêm</a>
+                        <a href="@Url.Action("Trash","Topic")" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Thùng rác</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                @Html.Partial("Message")
+                <table class="table table-bordered table-striped" id="myTable">
+                    <thead>
+                        <tr>
+                            <th class="text-center" style="width:20px">#</th>
+                            <th>Danh Mục</th>
+                            <th>
+                                Slug
+                            </th>
+                            <th>
+                                Ngày tạo
+                            </th>
+                            <th class="text-center" style="width:180px">Chức năng</th>
+                            <th class="text-center" style="width:20px">ID</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td><input type="checkbox" name="checkId" value="" /></td>
+                                <td>@item.Name</td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Slug)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CreatedAt)
+                                </td>
+                                <td class="text-center">
+                                    @if (item.Status == 1)
+                                    {
+                                        <a href="@Url.Action("Status","Topic",  new { id = item.Id })" class="btn btn-sm btn-success"><i class="fas fa-toggle-on"></i> </a>
+                                    }
+                                    else
+                                    {
+                                        <a href="@Url.Action("Status","Topic",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-toggle-off"></i> </a>
+                                    }
+
+                                    <a href="@Url.Action("Details","Topic",  new { id = item.Id })" class="btn btn-sm btn-primary"><i class="fas fa-eye"></i> </a>
+                                    <a href="@Url.Action("Edit","Topic",  new { id = item.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> </a>
+                                    <a href="@Url.Action("DelTrash","Topic",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> </a>
+                                </td>
+                                <td>@item.Id</td>
+                            </tr>
+                        }
+                    </tbody>
+
+                </table>
+            </div>
+
+        </div>
+        <!-- /.card -->
+
+    </section>
+    <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
