--- a/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Topic/Trash.cshtml
+++ b/ShopLap_SLT/ShopLap_SLT/Areas/Admin/Views/Topic/Trash.cshtml
@@ -1,7 +1,6 @@
-﻿@model IEnumerable<MyClass.Models.Product>
-
+﻿@model IEnumerable<MyClass.Models.Topic>
 @{
-    ViewBag.Title = "Tất cả sản phẩm";
+    ViewBag.Title = "Thùng rác danh mục";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 @section header {
@@ -24,11 +23,10 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-6">
-                        <strong class="text-danger text-uppercase">Sản Phẩm</strong>
+                        <strong class="text-danger text-uppercase">Thùng rác danh mục sản phẩm</strong>
                     </div>
                     <div class="col-md-6 text-right">
-                        <a href="@Url.Action("Create","Product")" class="btn btn-sm btn-success"><i class="fas fa-plus"></i> Thêm</a>
-                        <a href="@Url.Action("Trash","Product")" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Thùng rác</a>
+                        <a href="@Url.Action("Index","Topic")" class="btn btn-sm btn-info"><i class="fas fa-long-arrow-alt-left"></i> Quay lại</a>
                     </div>
                 </div>
             </div>
@@ -38,18 +36,14 @@
                     <thead>
                         <tr>
                             <th class="text-center" style="width:20px">#</th>
-                            <th class="text-center" style="width:100px">Hình</th>
-                            <th>Tên sản phẩm</th>
+                            <th>Danh Mục</th>
                             <th>
-                                Danh mục sản phẩm
-                            </th>
-                            <th>
-                                Nhà cung cấp
+                                Slug
                             </th>
                             <th>
                                 Ngày tạo
                             </th>
-                            <th class="text-center" style="width:180px">Chức năng</th>
+                            <th class="text-center" style="width:120px">Chức năng</th>
                             <th class="text-center" style="width:20px">ID</th>
                         </tr>
                     </thead>
@@ -59,26 +53,16 @@
                         {
                             <tr>
                                 <td><input type="checkbox" name="checkId" value="" /></td>
-                                <td><img src="~/Public/images/products/@item.Image" alt="TenHinh" class="img-fluid" /></td>
                                 <td>@item.Name</td>
-                                <td>@item.CatId</td>
-                                <td>111</td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Slug)
+                                </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.CreatedAt)
                                 </td>
                                 <td class="text-center">
-                                    @if (item.Status == 1)
-                                    {
-                                        <a href="@Url.Action("Status","Product",  new { id = item.Id })" class="btn btn-sm btn-success"><i class="fas fa-toggle-on"></i> </a>
-                                    }
-                                    else
-                                    {
-                                        <a href="@Url.Action("Status","Product",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-toggle-off"></i> </a>
-                                    }
-
-                                    <a href="@Url.Action("Details","Product",  new { id = item.Id })" class="btn btn-sm btn-primary"><i class="fas fa-eye"></i> </a>
-                                    <a href="@Url.Action("Edit","Product",  new { id = item.Id })" class="btn btn-sm btn-info"><i class="fas fa-edit"></i> </a>
-                                    <a href="@Url.Action("DelTrash","Product",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> </a>
+                                    <a href="@Url.Action("Retrash","Topic",  new { id = item.Id })" class="btn btn-sm btn-info"><i class="fas fa-trash-restore"></i> </a>
+                                    <a href="@Url.Action("Delete","Topic",  new { id = item.Id })" class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> </a>
                                 </td>
                                 <td>@item.Id</td>
                             </tr>
